# UniPaste

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: ci.yml  release.yml
src/: main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/clipboard/: mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/crypto/: mod.rs
src-tauri/src/discovery/: mod.rs
src-tauri/src/sync/: engine.rs  protocol.rs
