[package]
name = "unipaste"
version = "0.1.0"
edition = "2021"

[lib]
name = "unipaste_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
arboard = { version = "3", features = ["image-data"] }
bytes = "1"
base64 = "0.22"
blake3 = "1"
png = "0.17"
keyring = "3"
ed25519-dalek = { version = "2", features = ["rand_core"] }
x25519-dalek = "2"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha2 = "0.10"
mdns-sd = "0.13"
quinn = "0.11"
rcgen = "0.13"
rustls = { version = "0.23", features = ["ring"] }
rand_core = { version = "0.6", features = ["getrandom"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_DataExchange",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
default = []
